[package]
name = "hackattic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
