[package]
name = "hackattic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.30"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
ilog = "1.0.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
reqwest = "0.12.4"
scrypt = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.10"
zip = "2.1.3"
